--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2836,7 +2836,7 @@ span {
 }
 
 .item-bg-color {
-  background-color: #F4F6FA !important;
+  background-color: #f4f6fa !important;
 }
 
 .hero-1 {
@@ -2871,7 +2871,7 @@ span {
   color: var(--white);
 }
 .hero-1 .hero-content p {
-  color: #D5D5D5;
+  color: #d5d5d5;
   margin-top: 10px;
 }
 .hero-1 .hero-content .hero-button {
@@ -2967,7 +2967,7 @@ span {
   }
 }
 .hero-1 .hero-content-2 p {
-  color: #D5D5D5;
+  color: #d5d5d5;
   margin-top: 10px;
 }
 .hero-1 .hero-content-2 .hero-button {
@@ -3029,7 +3029,7 @@ span {
   margin-top: 5px;
   font-size: 18px;
   font-weight: 300;
-  color: #D5D5D5;
+  color: #d5d5d5;
 }
 .hero-1 .hero-image-items {
   text-align: right;
@@ -3076,13 +3076,13 @@ span {
   font-weight: 400;
 }
 .hero-1 .hero-items-image-2 .hero-right .client-top h3 b {
-  color: #FFBF25;
+  color: #ffbf25;
   font-size: 16px;
 }
 .hero-1 .hero-items-image-2 .hero-right .hero-car-box-items {
   padding: 20px;
   border-radius: 12px;
-  border: 1px solid #4376FB;
+  border: 1px solid #4376fb;
   background: #082448;
   position: relative;
   margin-top: 32px;
@@ -3207,7 +3207,7 @@ span {
   visibility: hidden;
 }
 .hero-3 .hero-left-items .hero-content h4 {
-  color: #DB0000;
+  color: #db0000;
   margin-bottom: 15px;
 }
 .hero-3 .hero-left-items .hero-content h1 {
@@ -3226,7 +3226,7 @@ span {
   text-align: center;
 }
 .hero-3 .hero-right-items h3 {
-  color: #DB0000;
+  color: #db0000;
   margin-bottom: 10px;
 }
 .hero-3 .hero-right-items p {
@@ -3296,7 +3296,8 @@ span {
     display: none;
   }
 }
-.hero-3 .hero-slider-2 .array-button .array-prev, .hero-3 .hero-slider-2 .array-button .array-next {
+.hero-3 .hero-slider-2 .array-button .array-prev,
+.hero-3 .hero-slider-2 .array-button .array-next {
   width: 50px;
   height: 50px;
   line-height: 50px;
@@ -3306,7 +3307,8 @@ span {
   border-radius: 50%;
   border: 1px solid var(--white);
 }
-.hero-3 .hero-slider-2 .array-button .array-prev:hover, .hero-3 .hero-slider-2 .array-button .array-next:hover {
+.hero-3 .hero-slider-2 .array-button .array-prev:hover,
+.hero-3 .hero-slider-2 .array-button .array-next:hover {
   background-color: var(--theme);
   color: var(--white);
   border: 1px solid var(--theme);
@@ -3314,6 +3316,44 @@ span {
 .hero-3:hover .array-button {
   opacity: 1;
   visibility: visible;
+}
+
+.homepage-3 {
+  background-image: url("../img/homepage-3/hero-2.jpg");
+  height: 100vh;
+}
+.homepage-3::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.homepage-3 .hero-3-slider {
+  color: white;
+}
+.homepage-3 .hero-3-slider .hero-3-thumb {
+  background: transparent;
+  max-height: 700px;
+  object-fit: cover;
+  overflow: hidden;
+  position: relative;
+}
+.homepage-3 .hero-3-slider .hero-3-thumb img {
+  object-fit: cover;
+  border-radius: 12px;
+  max-width: 700px;
+  width: 100%;
+}
+.homepage-3 .hero-3-slider .hero-3-thumb .hero-3-footer {
+  position: absolute;
+  z-index: 5;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  padding: 20px 30px;
+  background: rgba(0, 0, 0, 0.3);
 }
 
 .mean-container a.meanmenu-reveal {
@@ -6385,4 +6425,6 @@ span {
   border-radius: 4px;
   border: 1px solid rgba(85, 85, 85, 0.04);
   background-color: #F4F6FA;
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
