--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,16 +1,14 @@
-
 :root {
-    
-    --body: #fff;
-    --black: #000;
-    --white: #fff;
-    --theme: #4376FB;
-    --theme2: #FFBF25;
-    --header: #000000;
-    --text: #555555;
-    --border: #D5D5D5;
-    --bg: #F4F6FA;
-    --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
+  --body: #fff;
+  --black: #000;
+  --white: #fff;
+  --theme: #4376fb;
+  --theme2: #ffbf25;
+  --header: #000000;
+  --text: #555555;
+  --border: #d5d5d5;
+  --bg: #f4f6fa;
+  --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
 }
 
 // Theme Color - Defualt Colors
