--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -12,14 +12,13 @@ Version: 1.0.0
 
 //>> Mixins <<//
 @import "_mixins";
-//>> Variables <<//	
+//>> Variables <<//
 @import "_variables";
 //>> Buttons <<//
 @import "_buttons";
 //>> Typography <<//
 @import "_typography";
-//>> Basic End <<//	
-
+//>> Basic End <<//
 
 //>> Template Section Style Start <<//
 
@@ -69,7 +68,7 @@ Version: 1.0.0
 @import "_team";
 //>> Testimonial <<//
 @import "_testimonial";
-
+// >> Client <<//
+@import "_client";
 
 //>> Template Section Style End <<//
-
