--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -70,5 +70,7 @@ Version: 1.0.0
 @import "_testimonial";
 // >> Client <<//
 @import "_client";
+//>> Counter <<//
+@import "_counter";
 
 //>> Template Section Style End <<//
