--- a/main-files/assets/scss/_counter.scss
+++ b/main-files/assets/scss/_counter.scss
@@ -44,7 +44,7 @@
         font-size: 64px;
         @include transition;
 
-        span {
+        span.count {
           @include transition;
         }
       }
