--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -1382,7 +1382,7 @@ span {
   content: "";
   height: 2px;
   width: 284px;
-  background: linear-gradient(180deg, #4376FB 0%, rgba(67, 118, 251, 0.1) 100%);
+  background: linear-gradient(180deg, #4376fb 0%, rgba(67, 118, 251, 0.1) 100%);
 }
 @media (max-width: 1199px) {
   .feature-box-items::before {
@@ -1470,7 +1470,7 @@ span {
   color: var(--header);
 }
 .feature-car-wrapper .car-list-box.style-2 .form-clt .nice-select {
-  background: #F4F6FA;
+  background: #f4f6fa;
 }
 .feature-car-wrapper .car-list-box.style-2 .form-clt .nice-select span {
   color: var(--text);
@@ -1627,14 +1627,16 @@ span {
   position: relative;
   z-index: 9;
 }
-.counter-wrapper .counter-box:hover .content h2, .counter-wrapper .counter-box:hover .content p, .counter-wrapper .counter-box.active .content h2, .counter-wrapper .counter-box.active .content p {
+.counter-wrapper .counter-box:hover .content h2,
+.counter-wrapper .counter-box:hover .content p, .counter-wrapper .counter-box.active .content h2,
+.counter-wrapper .counter-box.active .content p {
   color: var(--white);
 }
 
 .feature-card-items {
   position: relative;
   padding: 34px;
-  background-color: #F4F6FA;
+  background-color: #f4f6fa;
   border-radius: 4px;
 }
 .feature-card-items::before {
@@ -1644,7 +1646,7 @@ span {
   content: "";
   height: 2px;
   width: 275px;
-  background: linear-gradient(180deg, #4376FB 0%, rgba(67, 118, 251, 0.1) 100%);
+  background: linear-gradient(180deg, #4376fb 0%, rgba(67, 118, 251, 0.1) 100%);
 }
 @media (max-width: 1199px) {
   .feature-card-items::before {
@@ -1655,6 +1657,33 @@ span {
   margin-bottom: 20px;
 }
 .feature-card-items .content h3 {
+  margin-bottom: 5px;
+}
+
+.feature-card-items-2 {
+  position: relative;
+  padding: 20px;
+  background-color: #f4f6fa;
+  border-radius: 4px;
+}
+.feature-card-items-2::before {
+  position: absolute;
+  top: 52px;
+  right: 35px;
+  content: "";
+  height: 2px;
+  width: 190px;
+  background: linear-gradient(180deg, #4376fb 0%, rgba(67, 118, 251, 0.1) 100%);
+}
+@media (max-width: 1199px) {
+  .feature-card-items-2::before {
+    display: none;
+  }
+}
+.feature-card-items-2 .icon {
+  margin-bottom: 20px;
+}
+.feature-card-items-2 .content h3 {
   margin-bottom: 5px;
 }
 
@@ -4885,7 +4914,7 @@ span {
 .shop-box-items .shop-image .post-dis {
   display: inline-block;
   padding: 6px 8px;
-  background-color: #DB0000;
+  background-color: #db0000;
   color: var(--white);
   font-size: 12px;
   font-weight: 500;
@@ -4897,7 +4926,7 @@ span {
 }
 .shop-box-items .shop-content {
   padding: 12px;
-  background-color: #F4F6FA;
+  background-color: #f4f6fa;
   border-radius: 4px;
   margin-top: 4px;
 }
@@ -4912,7 +4941,7 @@ span {
   color: var(--theme);
 }
 .shop-box-items .shop-content .star {
-  color: #FFBF25;
+  color: #ffbf25;
   font-size: 16px;
   margin-top: 5px;
   margin-bottom: 10px;
@@ -5050,7 +5079,7 @@ span {
 }
 .feature-product-left-items .content .star {
   margin-top: 15px;
-  color: #FFBF25;
+  color: #ffbf25;
   font-size: 16px;
 }
 .feature-product-left-items .content .star span {
@@ -5132,7 +5161,7 @@ span {
 }
 .feature-product-box-items .content .star {
   margin-top: 5px;
-  color: #FFBF25;
+  color: #ffbf25;
   font-size: 16px;
 }
 .feature-product-box-items .content .price-list {
@@ -5159,7 +5188,7 @@ span {
   border-radius: 12px;
   border: 1px solid rgba(213, 213, 213, 0.2);
   padding: 0 20px;
-  background-color: #F4F6FA;
+  background-color: #f4f6fa;
 }
 @media (max-width: 767px) {
   .woocommerce-notices-wrapper {
@@ -5357,7 +5386,7 @@ span {
   border: none;
 }
 .main-cart-wrapper .cart-pragh-box {
-  margin-top: 24px;
+  margin-top: 10px;
   padding-right: 30px;
 }
 .main-cart-wrapper .cart-pragh-box .theme-btn {
@@ -5365,7 +5394,7 @@ span {
 }
 .main-cart-wrapper .cart-graph {
   border: 1px solid var(--border);
-  padding: 30px 30px;
+  padding: 37px 30px;
   border-radius: 5px;
 }
 .main-cart-wrapper .cart-graph h4 {
@@ -5421,7 +5450,7 @@ span {
   width: 100%;
   outline: none;
   box-shadow: none;
-  border: 1px solid #E5E5E5;
+  border: 1px solid #e5e5e5;
   border-radius: 6px;
   padding: 19px 24px;
   color: var(--header);
@@ -5497,7 +5526,7 @@ span {
   width: 18px;
   height: 18px;
   border-radius: 4px;
-  border: 1px solid #67687A;
+  border: 1px solid #67687a;
   outline: none;
   color: var(--header);
 }
@@ -5522,7 +5551,7 @@ span {
   line-height: 1;
 }
 .checkout-order-area .product-checout-area .checkout-item {
-  border-bottom: 1px solid #E5E5E5;
+  border-bottom: 1px solid #e5e5e5;
   padding-bottom: 20px;
   margin-bottom: 20px;
 }
@@ -5544,7 +5573,7 @@ span {
 }
 .checkout-order-area .product-checout-area .checkout-item-2 {
   margin-bottom: 20px;
-  border-bottom: 1px solid #E5E5E5;
+  border-bottom: 1px solid #e5e5e5;
   padding-bottom: 20px;
 }
 .checkout-order-area .product-checout-area .checkout-item-2 .from-customradio-2 {
@@ -5573,7 +5602,7 @@ span {
   gap: 5px;
 }
 .checkout-order-area .product-checout-area .checkout-item-2 .brand-logo li {
-  border: 1px solid #E3E3E3;
+  border: 1px solid #e3e3e3;
   padding: 5px 15px;
   border-radius: 6px;
 }
@@ -5957,6 +5986,9 @@ span {
   text-align: center;
   height: 145px;
 }
+.car-box-items .car-image img {
+  max-width: 100%;
+}
 .car-box-items .car-list-items {
   margin-top: 30px;
 }
@@ -6328,16 +6360,16 @@ span {
   justify-content: space-between;
   margin-top: 10px;
 }
-.car-section-3-short .left-section {
+.car-section-3-short .left-section, .car-section-3-short #suggested-car-btns-3 {
   display: flex;
   align-items: center;
   gap: 20px;
 }
-.car-section-3-short .left-section button {
+.car-section-3-short .left-section button, .car-section-3-short #suggested-car-btns-3 button {
   padding-bottom: 10px;
   transition: color 0.3s;
 }
-.car-section-3-short .left-section button:hover {
+.car-section-3-short .left-section button:hover, .car-section-3-short #suggested-car-btns-3 button:hover {
   color: var(--theme);
 }
 .car-section-3-short .right-section {
@@ -6364,6 +6396,10 @@ span {
   border: 1px solid var(--theme);
   padding: 10px 20px;
   border-radius: 12px;
+}
+
+.hide {
+  display: none;
 }
 
 .team-box-items {
