--- a/main-files/assets/scss/_footer.scss
+++ b/main-files/assets/scss/_footer.scss
@@ -1,93 +1,165 @@
 .footer-widgets-wrapper {
-    padding: 70px 0 100px;
+  padding: 70px 0 100px;
 
-    @include breakpoint (max-lg){
-        padding: 50px 0 80px;
+  @include breakpoint(max-lg) {
+    padding: 50px 0 80px;
+  }
+
+  .single-footer-widget {
+    margin-top: 30px;
+
+    .widget-head {
+      margin-bottom: 30px;
+
+      @include breakpoint(max-sm) {
+        margin-bottom: 20px;
+      }
+
+      h3 {
+        font-size: 24px;
+        font-weight: 700;
+        color: $theme-color-2;
+      }
     }
 
-    .single-footer-widget {
-        margin-top: 30px;
+    .list-items {
+      li {
+        font-size: 20px;
+        @include transition;
 
-        .widget-head {
-            margin-bottom: 30px;
+        a {
+          color: #f5f5f5;
+          background-image: linear-gradient($white, $white);
+          background-position: 0 95%;
+          background-repeat: no-repeat;
+          background-size: 0% 2px;
+          display: inline-block;
+          @include transition;
 
-            @include breakpoint (max-sm){
-               margin-bottom: 20px;
-            }
-
-           h3 {
-                font-size: 24px;
-                font-weight: 700;
-                color: $white;
-           }
+          &:hover {
+            background-size: 100% 1px;
+            color: $white;
+          }
         }
 
-        .list-items {
-
-            li {
-                font-size: 20px;
-                @include transition;
-
-                a {
-                    color:#F5F5F5;
-                    background-image: linear-gradient($white,$white);
-                    background-position: 0 95%;
-                    background-repeat: no-repeat;
-                    background-size: 0% 2px;
-                    display: inline-block;
-                    @include transition;
-
-                    &:hover {
-                        background-size: 100% 1px;
-                        color: $white;
-                    }
-                }
-
-                &:not(:last-child){
-                    margin-bottom: 15px;
-                }
-
-                &:hover {
-                    margin-left: 5px;
-                }
-            }
+        &:not(:last-child) {
+          margin-bottom: 15px;
         }
 
-        .contact-list {
-
-            li {
-                color: #DADADA; 
-
-                &:not(:last-child){
-                    margin-bottom: 20px;
-                }
-
-                a {
-                    color: #F5F5F5; 
-                }
-            }
+        &:hover {
+          margin-left: 5px;
         }
+      }
     }
+
+    .contact-list {
+      li {
+        color: #dadada;
+
+        &:not(:last-child) {
+          margin-bottom: 20px;
+        }
+
+        a {
+          color: #f5f5f5;
+        }
+      }
+    }
+  }
 }
 
 .footer-bottom-wrapper {
-    @include flex;
-    justify-content: space-between;
-    border-top: 1px solid rgba(67, 118, 251, .3);
-    padding: 30px 0;
+  @include flex;
+  justify-content: space-between;
+  border-top: 1px solid rgba(67, 118, 251, 0.3);
+  padding: 30px 0;
 
-    @include breakpoint (max-md){
-       flex-wrap: wrap;
-       gap: 20px;
-       justify-content: center;
-       text-align: center;
-    }
-    
-    p {
-        color: rgba(245, 245, 245, .8);
+  @include breakpoint(max-md) {
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+    text-align: center;
+  }
 
-        a {
-            color: rgba(245, 245, 245, .8);
-        }
+  p {
+    color: rgba(245, 245, 245, 0.8);
+
+    a {
+      color: rgba(245, 245, 245, 0.8);
     }
+  }
 }
+
+.footer-3 {
+  padding-top: 120px ;
+	@include breakpoint(max-xl){
+		padding-top: 100px 0;
+	}
+	@include breakpoint(max-lg){
+		padding-top: 80px 0;
+	}
+  padding-bottom: 0;
+  background-color: $footer-3;
+  color: $white;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  &-contact{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    div.icon{
+      width: 50px;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: #dadada solid 1px;
+      border-radius: 8px;
+
+      i{
+        font-size: 20px;
+        color: #dadada;
+      }
+    }
+
+    div.content{
+      span{
+        font-size: 25px;
+        font-weight: 500;
+        color: $theme-color-2;
+      }
+    }
+  }
+
+  &-social-wrapper{
+    display: flex;
+    gap: 10px;
+
+    a{
+      width: 35px;
+      height: 35px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 5px;
+      transition: all 0.3s ease;
+      border: 1px solid $white;
+
+      &:hover{
+        &:hover i {
+          color: #e11d48;
+        }
+      }
+
+      i{
+        font-size: 16px;
+        color: $theme-color-2;
+      }
+    }
+  }
+}
+
