--- a/main-files/assets/scss/_variables.scss
+++ b/main-files/assets/scss/_variables.scss
@@ -9,6 +9,7 @@
   --border: #d5d5d5;
   --bg: #f4f6fa;
   --box-shadow: 0px 4px 25px 0px rgba(0, 0, 0, 0.06);
+  --footer: #0a111e;
 }
 
 // Theme Color - Defualt Colors
@@ -21,3 +22,4 @@ $header-color: var(--header);
 $border-color: var(--border);
 $bg-color: var(--bg);
 $shadow: var(--box-shadow);
+$footer-3: var(--footer);
