Seller center design

--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -72,5 +72,7 @@ Version: 1.0.0
 @import "_client";
 //>> Counter <<//
 @import "_counter";
+//>> Seller Center <<//
+@import "_seller";
 
 //>> Template Section Style End <<//
