--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -6701,4 +6701,58 @@ span {
   color: var(--white);
 }
 
+.seller-center-3 img {
+  width: 100%;
+  height: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.seller-center-3-right {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-top: 50px;
+}
+@media (min-width: 992px) {
+  .seller-center-3-right {
+    margin-left: 50px;
+    padding-top: 0;
+  }
+}
+.seller-center-3-right h2 {
+  font-size: 35px;
+  font-weight: bold;
+}
+.seller-center-3-right p {
+  margin-top: 10px;
+}
+.seller-center-3-right ul {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.seller-center-3-right ul li i {
+  display: inline-block;
+  color: var(--theme);
+  padding: 8px;
+  background: var(--bg);
+  border-radius: 50%;
+  box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 25px 0px;
+  margin-right: 10px;
+}
+.seller-center-3-right ul span {
+  font-weight: 600;
+}
+.seller-center-3-right button {
+  padding: 10px 20px;
+  background: var(--theme);
+  color: var(--white);
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  width: fit-content;
+  margin-top: 50px;
+}
+
 /*# sourceMappingURL=main.css.map */
