--- a/main-files/assets/scss/_seller.scss
+++ b/main-files/assets/scss/_seller.scss
@@ -1,62 +1,73 @@
-.seller-center-3{
-   img{
-      width: 100%;
-      height: auto;
-      margin-top: auto;
-      margin-bottom: auto;
-   }
+.seller-center-3 {
+  img {
+    width: 100%;
+    height: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+  }
 
-   &-right{
-      height: 100%;
+  &-right {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 50px;
+
+    @include breakpoint(lg) {
+      margin-left: 50px;
+      padding-top: 0;
+    }
+
+    h2 {
+      font-size: 35px;
+      font-weight: bold;
+    }
+
+    p {
+      margin-top: 10px;
+    }
+
+    ul {
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      padding-top: 50px;
-      
-      @include breakpoint(lg){
-         margin-left: 50px;
-         padding-top: 0;
-      }
+      gap: 10px;
 
-      h2{
-         font-size: 35px;
-         font-weight: bold;
+      li {
+        i {
+          display: inline-block;
+          color: $theme-color;
+          padding: 8px;
+          background: $bg-color;
+          border-radius: 50%;
+          box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 25px 0px;
+          margin-right: 10px;
+        }
       }
+      h4 {
+        font-size: 14px;
+        font-weight: 500;
+        display: inline-block;
 
+        @include breakpoint(lg) {
+          font-size: 16px;
+          font-weight: 600;
+        }
+      }
       p{
-         margin-top: 10px;
+        font-size: 14px;
+        color: $text-color;
       }
+    }
 
-      ul{
-         display: flex;
-         flex-direction: column;
-         gap: 10px;
-
-         li{
-            i{
-               display: inline-block;
-               color: $theme-color;
-               padding: 8px;
-               background: $bg-color;
-               border-radius: 50%;
-               box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 25px 0px;
-               margin-right: 10px;
-            }
-         }
-         span{
-            font-weight: 600;
-         }
-      }
-
-      button{
-         padding: 10px 20px;
-         background: $theme-color;
-         color: $white;
-         border: none;
-         border-radius: 10px;
-         font-size: 16px;
-         width: fit-content;
-         margin-top: 50px;
-      }
-   }
+    button {
+      padding: 10px 20px;
+      background: $theme-color;
+      color: $white;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+      width: fit-content;
+      margin-top: 50px;
+    }
+  }
 }
