--- a/main-files/assets/scss/main.scss
+++ b/main-files/assets/scss/main.scss
@@ -74,5 +74,7 @@ Version: 1.0.0
 @import "_counter";
 //>> Seller Center <<//
 @import "_seller";
+//>> Home Car Details <<//
+@import "_home_car";
 
 //>> Template Section Style End <<//
