--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -6672,6 +6672,11 @@ span {
   color: var(--white);
 }
 
+.seller-center-3 {
+  background: linear-gradient(45deg, #E8F5E9 50%, #EDE7F6 50%, #EDE7F6);
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
 .seller-center-3 img {
   width: 100%;
   height: auto;
@@ -6739,15 +6744,25 @@ span {
 }
 
 .home-car-details-3 {
-  background: linear-gradient(90deg, rgba(255, 0, 0, 0.267) 33.33%, rgba(0, 0, 255, 0.349) 33.33%, rgba(0, 0, 255, 0.308) 66.66%, green 66.66%);
+  background: linear-gradient(90deg, #E8F5E9 33.33%, #EDE7F6 33.33%, #EDE7F6 66.66%, #E0F7FA 66.66%);
+  transform: perspective(1000px) rotateX(10deg);
+  box-shadow: 0 0 18px #dbdbdb;
+  backdrop-filter: drop-shadow(27px 19px 21px red);
+  margin: 100px 50px;
+  padding: 20px;
+  color: black;
 }
 .home-car-details-3-title h2 {
   font-size: 45px;
   font-weight: 700;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
+  color: #404040;
 }
 .home-car-details-3-card {
+  background: repeating-linear-gradient(45deg, rgba(255, 255, 255, 0.5019607843), rgba(255, 255, 255, 0.5019607843) 10px, rgba(238, 238, 238, 0.5019607843) 10px, rgba(238, 238, 238, 0.5019607843) 20px);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgb(255, 255, 255);
   padding: 10px;
   padding: 15px 10px;
   border-radius: 10px;
@@ -6757,7 +6772,9 @@ span {
   gap: 20px;
   width: fit-content;
   height: auto;
-  background-color: var(--white);
+}
+.home-car-details-3-card h4 {
+  color: #4376fb;
 }
 .home-car-details-3-card img {
   max-width: 200px;
@@ -6766,7 +6783,8 @@ span {
 }
 .home-car-details-3 .main-image {
   max-width: 150%;
-  width: 150%;
+  width: 130%;
+  margin-left: -120px;
 }
 .home-car-details-3 .left-side .navigate-btn {
   display: inline-block;
