--- a/main-files/assets/scss/_home_car.scss
+++ b/main-files/assets/scss/_home_car.scss
@@ -1,5 +1,11 @@
 .home-car-details-3 {
-  background: linear-gradient(90deg, rgba(255, 0, 0, 0.267) 33.33%, rgba(0, 0, 255, 0.349) 33.33%, rgba(0, 0, 255, 0.308) 66.66%, green 66.66%);
+  background: linear-gradient(90deg, #E8F5E9 33.33%, #EDE7F6 33.33%, #EDE7F6 66.66%, #E0F7FA 66.66%);
+  transform: perspective(1000px) rotateX(10deg);
+  box-shadow: 0 0 18px #dbdbdb;
+  backdrop-filter: drop-shadow(27px 19px 21px red);
+  margin: 100px 50px;
+  padding: 20px;
+  color: black;
 
   &-title {
     h2 {
@@ -7,10 +13,14 @@
       font-weight: 700;
       text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
       margin-bottom: 20px;
+      color: #404040;
     }
   }
 
   &-card {
+    background: repeating-linear-gradient(45deg, #ffffff80, #ffffff80 10px, #eeeeee80 10px, #eeeeee80 20px);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgb(255 255 255);
     padding: 10px;
     padding: 15px 10px;
     border-radius: 10px;
@@ -20,7 +30,7 @@
     gap: 20px;
     width: fit-content;
     height: auto;
-    background-color: $white;
+    h4{color: #4376fb}
 
     img {
       max-width: 200px;
@@ -31,7 +41,8 @@
 
   .main-image {
     max-width: 150%;
-    width: 150%;
+    width: 130%;
+    margin-left: -120px;
   }
 
   .left-side {
