--- a/main-files/assets/scss/_seller.scss
+++ b/main-files/assets/scss/_seller.scss
@@ -1,4 +1,8 @@
 .seller-center-3 {
+  background: linear-gradient(45deg, #E8F5E9 50%, #EDE7F6 50%, #EDE7F6);
+  padding-top: 100px;
+  padding-bottom: 100px;
+  
   img {
     width: 100%;
     height: auto;
