--- a/main-files/assets/css/main.css
+++ b/main-files/assets/css/main.css
@@ -3395,19 +3395,11 @@ span {
 }
 
 .homepage-3 {
-  background-image: url("../img/homepage-3/hero-2.jpg");
+  background: linear-gradient(145deg, #62aa4b 33.33%, #346086 33.33%, #346086 66.66%, #62aa4b 66.66%);
   height: 100vh;
   padding: 120px 0 120px;
   height: auto;
   position: relative;
-}
-.homepage-3::before {
-  content: "";
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.3);
 }
 .homepage-3 .hero-3-slider {
   color: white;
@@ -3422,8 +3414,9 @@ span {
 .homepage-3 .hero-3-slider .hero-3-thumb img {
   object-fit: cover;
   border-radius: 12px;
-  max-width: 100%;
-  width: 100%;
+  max-width: 300px;
+  width: 300px;
+  height: 400px;
   border: 3px solid var(--white);
 }
 .homepage-3 .hero-3-slider .hero-3-thumb .hero-3-footer {
