--- a/main-files/assets/scss/_hero.scss
+++ b/main-files/assets/scss/_hero.scss
@@ -544,20 +544,11 @@
 }
 
 .homepage-3 {
-  background-image: url("../img/homepage-3/hero-2.jpg");
+  background: linear-gradient(145deg, #62aa4b 33.33%, #346086 33.33%, #346086 66.66%, #62aa4b 66.66%);
   height: 100vh;
   padding: 120px 0 120px;
   height: auto;
   position: relative;
-
-  &::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.3);
-  }
 
   .hero-3-slider {
     color: white;
@@ -576,8 +567,9 @@
       img {
         object-fit: cover;
         border-radius: 12px;
-        max-width: 100%;
-        width: 100%;
+        max-width: 300px;
+        width: 300px;
+        height: 400px;
         border: 3px solid $white;
       }
 
