--- a/main-files/assets/scss/_hero.scss
+++ b/main-files/assets/scss/_hero.scss
@@ -556,7 +556,10 @@
     //   padding-left: 20px;
     //   padding-right: 20px;
     // }
-
+    .slider{
+      width: 300px !important;
+      height: 400px;
+    }
     .hero-3-thumb {
       background: transparent;
       max-height: 750px;
@@ -567,9 +570,8 @@
       img {
         object-fit: cover;
         border-radius: 12px;
-        max-width: 300px;
-        width: 300px;
-        height: 400px;
+        max-width: 100%;
+        width: 100%;
         border: 3px solid $white;
       }
 
